include kafka recordTimestamp in streamMessageMetadata object